# joyboard

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/joyboard/: __about__.py  main.py
tests/: __init__.py  test_main.py
