[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joyboard"
dynamic = ["version"]
description = 'Write text from a joypad'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Tacio Medeiros", email = "taciofvmed@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pygame~=2.5.2",
  "keyboard~=0.13.5",
]

[project.urls]
Documentation = "https://github.com/tacio/joyboard#readme"
Issues = "https://github.com/tacio/joyboard/issues"
Source = "https://github.com/tacio/joyboard"

[tool.hatch.version]
path = "src/joyboard/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/joyboard tests}"

[tool.coverage.run]
source_pkgs = ["joyboard", "tests"]
branch = true
parallel = true
omit = [
  "src/joyboard/__about__.py",
]

[tool.coverage.paths]
joyboard = ["src/joyboard", "*/joyboard/src/joyboard"]
tests = ["tests", "*/joyboard/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
